# elite-night-light

./: README.md  install.sh
res/: com.system76.CosmicAppletNightLight.desktop  demo.webm  io.github.kernel_ux.EliteNightLight.desktop
src/applet/: Cargo.toml
src/applet/src/: main.rs
src/cosmic-comp/src/: lib.rs  state.rs
src/cosmic-comp/src/backend/: winit.rs  x11.rs
src/cosmic-comp/src/backend/kms/: device.rs  mod.rs
src/cosmic-comp/src/backend/kms/surface/: mod.rs
src/cosmic-comp/src/backend/render/: mod.rs
src/cosmic-comp/src/backend/render/shaders/: offscreen.frag
src/cosmic-comp/src/config/: mod.rs
src/cosmic-comp/src/dbus/: mod.rs  night_light.rs
src/cosmic-comp/src/wayland/handlers/: output_configuration.rs
src/cosmic-comp/src/wayland/handlers/image_copy_capture/: render.rs
